--- a/manager/src/main/resources/inflationManagerTransactions.fxml
+++ b/manager/src/main/resources/inflationManagerTransactions.fxml
@@ -22,11 +22,10 @@
                     <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="612.0" prefWidth="842.0">
                             <children>
-                                <TextArea fx:id="transactionPlanTextArea" editable="false" layoutX="58.0"
-                                          layoutY="103.0" prefHeight="200.0" prefWidth="200.0"
-                                          stylesheets="@inflationManagerMain.css" AnchorPane.bottomAnchor="0.0"
-                                          AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-                                          AnchorPane.topAnchor="0.0"/>
+                                <TextArea fx:id="transactionPlanTextArea" layoutX="58.0" layoutY="103.0"
+                                          prefHeight="200.0" prefWidth="200.0" stylesheets="@inflationManagerMain.css"
+                                          AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+                                          AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"/>
                             </children>
                         </AnchorPane>
                     </content>
@@ -61,7 +60,7 @@
                 prefHeight="39.0" prefWidth="200.0" stylesheets="@inflationManagerMain.css" text="EXECUTE TRANSACTIONS"
                 AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="695.0" AnchorPane.rightAnchor="5.0"/>
         <Button fx:id="rebuildTransactionPlanBtn" layoutX="5.0" layoutY="609.0" mnemonicParsing="false"
-                prefHeight="47.0" prefWidth="140.0" text="Rebuild" AnchorPane.bottomAnchor="63.0"
+                prefHeight="47.0" prefWidth="290.0" text="Rebuild transaction plan" AnchorPane.bottomAnchor="63.0"
                 AnchorPane.leftAnchor="5.0"/>
         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e8e8e8" height="105.0" layoutX="303.0" layoutY="590.0"
                    stroke="BLACK" strokeType="INSIDE" width="385.0" AnchorPane.bottomAnchor="5.0"
@@ -82,17 +81,17 @@
                 <Font size="18.0"/>
             </font>
         </Label>
-        <Button fx:id="saveTransactionPlanBtn" layoutX="5.0" layoutY="666.0" mnemonicParsing="false" prefHeight="46.0"
-                prefWidth="140.0" text="Save transaction plan" AnchorPane.bottomAnchor="5.0"
+        <Button fx:id="saveTransactionPlanBtn" layoutX="5.0" layoutY="641.0" mnemonicParsing="false" prefHeight="25.0"
+                prefWidth="140.0" text="Save transaction plan" AnchorPane.bottomAnchor="34.0"
                 AnchorPane.leftAnchor="5.0"/>
         <Label layoutX="317.0" layoutY="602.0" text="excluded:" AnchorPane.bottomAnchor="81.0"
                AnchorPane.leftAnchor="317.0"/>
         <Label fx:id="excludedTransactionsLabel" layoutX="377.0" layoutY="602.0" text="0" AnchorPane.bottomAnchor="81.0"
                AnchorPane.leftAnchor="377.0"/>
-        <Button fx:id="saveExclusionsBtn" layoutX="155.0" layoutY="647.0" mnemonicParsing="false" prefHeight="46.0"
-                prefWidth="140.0" text="Save exclusions" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="155.0"/>
-        <Button fx:id="saveReroutingBtn" layoutX="155.0" layoutY="609.0" mnemonicParsing="false" prefHeight="47.0"
-                prefWidth="140.0" text="Save Rerouting" AnchorPane.bottomAnchor="63.0" AnchorPane.leftAnchor="155.0"/>
+        <Button fx:id="saveExclusionsBtn" layoutX="5.0" layoutY="674.0" mnemonicParsing="false" prefHeight="17.0"
+                prefWidth="140.0" text="Save exclusions" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0"/>
+        <Button fx:id="saveReroutingBtn" layoutX="155.0" layoutY="619.0" mnemonicParsing="false" prefHeight="25.0"
+                prefWidth="140.0" text="Save rerouting" AnchorPane.bottomAnchor="34.0" AnchorPane.leftAnchor="155.0"/>
         <Label layoutX="318.0" layoutY="625.0" text="rerouted:" AnchorPane.bottomAnchor="58.0"
                AnchorPane.leftAnchor="318.0"/>
         <Label fx:id="reroutedTransactionsLabel" layoutX="377.0" layoutY="625.0" text="0" AnchorPane.bottomAnchor="58.0"
