- Added missing Network setup for the stellar SDK in the StellarGateway - Added execution window to monitor output and progress of the transactions executions. - Augmented data formats with new data - Implemented payout computations - Changed rounding mode to HALF_DOWN for all decimal operations and centralized it in the settings class - Cleaned up and streamlined the TransactionsController's code to make the application flow more readable - Small fixes and improvements

--- a/manager/src/main/resources/inflationManagerTransactions.fxml
+++ b/manager/src/main/resources/inflationManagerTransactions.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane minHeight="700.0" minWidth="900.0" prefHeight="700.0" prefWidth="900.0"
+<AnchorPane fx:id="transactionPlannerStage" minHeight="700.0" minWidth="900.0" prefHeight="700.0" prefWidth="900.0"
             xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="com.lumenaut.poolmanager.TransactionsController">
     <children>
