- Fixed Processing flow for building transaction batches - Added coloring to the progress bar at the end of the operation (green/red) based on the outcome of the full operation - Added code to update the "executed" operations total when the user goes back to the transaction planner - Added code to disable execution of a completed transaction plan - Changed regular expressions for the decimal patterns to only validate decimal strings in the presence of the decimal part (requires at least a ".0" at the end) - Forced the Inflation Pay amount to be expressed in XLM instead of also accepting Stroops, too error prone - Added exclusion for transactions with negative amounts (can happen if the fee was higher than the payout)

--- a/manager/src/main/resources/inflationManagerMain.css
+++ b/manager/src/main/resources/inflationManagerMain.css
@@ -37,3 +37,19 @@
     -fx-background-color: #cdcbcb;
     -fx-text-alignment: center;
 }
+
+.green-bar {
+    -fx-accent: green;
+}
+
+.yellow-bar {
+    -fx-accent: yellow;
+}
+
+.orange-bar {
+    -fx-accent: orange;
+}
+
+.red-bar {
+    -fx-accent: red;
+}
