--- a/manager/src/main/resources/inflationManagerSettings.fxml
+++ b/manager/src/main/resources/inflationManagerSettings.fxml
@@ -7,39 +7,55 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="350.0" maxWidth="700.0" minHeight="350.0" minWidth="700.0" prefHeight="350.0" prefWidth="700.0"
+<AnchorPane maxHeight="483.0" maxWidth="700.0" minHeight="350.0" minWidth="700.0" prefHeight="483.0" prefWidth="700.0"
             xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="com.lumenaut.poolmanager.SettingsController">
     <children>
-        <Label layoutX="98.0" layoutY="25.0" text="Stellar Network"/>
-        <ChoiceBox fx:id="activeNetworkChoiceBox" layoutX="189.0" layoutY="21.0" prefHeight="25.0" prefWidth="496.0"
-                   AnchorPane.leftAnchor="189.0" AnchorPane.rightAnchor="15.0"/>
-        <Label layoutX="22.0" layoutY="60.0" text="Default Inflation Pool Address"/>
-        <TextField fx:id="defaultPoolAddressTextField" layoutX="189.0" layoutY="56.0" prefHeight="25.0"
-                   prefWidth="496.0" AnchorPane.leftAnchor="189.0" AnchorPane.rightAnchor="15.0"/>
-        <TextField fx:id="defaultFedNetworkInflationUrlTextField" layoutX="189.0" layoutY="94.0" prefHeight="25.0"
-                   prefWidth="496.0" AnchorPane.leftAnchor="189.0" AnchorPane.rightAnchor="15.0"/>
-        <Label layoutX="29.0" layoutY="98.0" text="Federation Network Address"/>
+        <Label layoutX="96.0" layoutY="24.0" text="Stellar Network" AnchorPane.leftAnchor="96.0"
+               AnchorPane.topAnchor="24.0"/>
+        <ChoiceBox fx:id="activeNetworkChoiceBox" layoutX="189.0" layoutY="20.0" prefHeight="25.0" prefWidth="496.0"
+                   AnchorPane.leftAnchor="189.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="20.0"/>
+        <Label layoutX="19.0" layoutY="59.0" text="Default Inflation Pool Address" AnchorPane.leftAnchor="19.0"
+               AnchorPane.topAnchor="59.0"/>
+        <TextField fx:id="defaultPoolAddressTextField" layoutX="189.0" layoutY="55.0" prefHeight="25.0"
+                   prefWidth="496.0" AnchorPane.leftAnchor="189.0" AnchorPane.rightAnchor="15.0"
+                   AnchorPane.topAnchor="55.0"/>
+        <TextField fx:id="defaultFedNetworkInflationUrlTextField" layoutX="189.0" layoutY="90.0" prefHeight="25.0"
+                   prefWidth="496.0" AnchorPane.leftAnchor="189.0" AnchorPane.rightAnchor="15.0"
+                   AnchorPane.topAnchor="90.0"/>
+        <Label layoutX="26.0" layoutY="94.0" text="Federation Network Address" AnchorPane.leftAnchor="26.0"
+               AnchorPane.topAnchor="94.0"/>
         <Button fx:id="saveBtn" layoutX="534.0" layoutY="361.0" mnemonicParsing="false" prefHeight="25.0"
                 prefWidth="151.0" text="Save" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="15.0"/>
         <Button fx:id="cancelBtn" layoutX="460.0" layoutY="361.0" mnemonicParsing="false" prefHeight="25.0"
                 prefWidth="64.0" text="Cancel" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="176.0"/>
-        <Label layoutX="41.0" layoutY="146.0" text="Horizon Database Address"/>
-        <TextField fx:id="horizonDbAddress" layoutX="191.0" layoutY="142.0" prefHeight="25.0" prefWidth="374.0"
-                   promptText="localhost" AnchorPane.leftAnchor="191.0"/>
-        <TextField fx:id="horizonDbPort" layoutX="605.0" layoutY="142.0" prefHeight="25.0" prefWidth="82.0"
-                   promptText="5432" AnchorPane.leftAnchor="605.0" AnchorPane.rightAnchor="13.0"/>
-        <Label layoutX="570.0" layoutY="146.0" text="Port"/>
-        <Label layoutX="128.0" layoutY="179.0" text="Username"/>
-        <Label layoutX="425.0" layoutY="179.0" text="Password"/>
-        <TextField fx:id="horizonDbUser" layoutX="191.0" layoutY="175.0" prefHeight="25.0" prefWidth="225.0"
-                   AnchorPane.leftAnchor="191.0" AnchorPane.rightAnchor="284.0"/>
-        <TextField fx:id="horizonDbPass" layoutX="480.0" layoutY="175.0" prefHeight="25.0" prefWidth="203.0"
-                   AnchorPane.leftAnchor="480.0" AnchorPane.rightAnchor="13.0"/>
-        <Separator layoutY="131.0" prefWidth="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"/>
-        <Label layoutX="309.0" layoutY="215.0" text="!!! WARNING !!!" textFill="RED"/>
-        <Label layoutX="58.0" layoutY="232.0" prefHeight="55.0" prefWidth="585.0"
-               text="When using your own horizon node to retrieve inflation votes make sure that it is operating on the same network (TEST/LIVE) as the one you have selected above, transactions are executed on the network configured in these settings. Only use this feature if you know what you are doing!"
-               textFill="RED" wrapText="true"/>
+        <Label layoutX="40.0" layoutY="276.0" text="Horizon Database Address" AnchorPane.leftAnchor="40.0"
+               AnchorPane.topAnchor="276.0"/>
+        <TextField fx:id="horizonDbAddress" layoutX="190.0" layoutY="272.0" prefHeight="25.0" prefWidth="374.0"
+                   promptText="localhost" AnchorPane.leftAnchor="190.0" AnchorPane.topAnchor="272.0"/>
+        <TextField fx:id="horizonDbPort" layoutX="604.0" layoutY="272.0" prefHeight="25.0" prefWidth="82.0"
+                   promptText="5432" AnchorPane.leftAnchor="604.0" AnchorPane.rightAnchor="14.0"
+                   AnchorPane.topAnchor="272.0"/>
+        <Label layoutX="569.0" layoutY="276.0" text="Port" AnchorPane.leftAnchor="569.0" AnchorPane.topAnchor="276.0"/>
+        <Label layoutX="127.0" layoutY="309.0" text="Username" AnchorPane.leftAnchor="127.0"
+               AnchorPane.topAnchor="309.0"/>
+        <Label layoutX="424.0" layoutY="309.0" text="Password" AnchorPane.leftAnchor="424.0"
+               AnchorPane.topAnchor="309.0"/>
+        <TextField fx:id="horizonDbUser" layoutX="190.0" layoutY="305.0" prefHeight="25.0" prefWidth="225.0"
+                   AnchorPane.leftAnchor="190.0" AnchorPane.topAnchor="305.0"/>
+        <TextField fx:id="horizonDbPass" layoutX="479.0" layoutY="305.0" prefHeight="25.0" prefWidth="203.0"
+                   AnchorPane.leftAnchor="479.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="305.0"/>
+        <Separator layoutY="196.0" prefWidth="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"/>
+        <Label layoutX="40.0" layoutY="209.0" prefHeight="55.0" prefWidth="646.0"
+               text="!!! WARNING !!! When using your own horizon node to retrieve inflation votes make sure that it is operating on the same network (TEST/LIVE) as the one you have selected above, transactions are executed on the network configured in these settings. Only use this feature if you know what you are doing!"
+               textFill="RED" wrapText="true" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0"
+               AnchorPane.topAnchor="209.0"/>
+        <Label layoutX="37.0" layoutY="129.0" text="Memo Text (max 28 chars)"/>
+        <TextField fx:id="defaultMemoTextField" layoutX="189.0" layoutY="125.0" prefHeight="25.0" prefWidth="496.0"
+                   AnchorPane.leftAnchor="189.0" AnchorPane.topAnchor="125.0"/>
+        <Label layoutX="63.0" layoutY="164.0" text="Fee (min 100 stroops)" AnchorPane.leftAnchor="63.0"
+               AnchorPane.topAnchor="164.0"/>
+        <TextField fx:id="defaultFeeTextField" layoutX="190.0" layoutY="160.0" prefHeight="25.0" prefWidth="496.0"
+                   AnchorPane.leftAnchor="190.0" AnchorPane.topAnchor="160.0"/>
     </children>
 </AnchorPane>
