--- a/manager/src/main/resources/inflationManagerMain.fxml
+++ b/manager/src/main/resources/inflationManagerMain.fxml
@@ -38,47 +38,47 @@
                         <AnchorPane>
                             <children>
                                 <TextArea fx:id="inflationPoolDataTextArea" editable="false" layoutY="37.0"
-                                          prefHeight="609.0" prefWidth="874.0" stylesheets="@inflationManagerMain.css"
+                                          prefHeight="804.0" prefWidth="766.0" stylesheets="@inflationManagerMain.css"
                                           AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0"
-                                          AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="37.0"/>
-                                <AnchorPane layoutX="880.0" layoutY="32.0" prefHeight="584.0" prefWidth="185.0"
+                                          AnchorPane.rightAnchor="229.0" AnchorPane.topAnchor="37.0"/>
+                                <AnchorPane layoutX="880.0" layoutY="32.0" prefHeight="809.0" prefWidth="215.0"
                                             AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="9.0"
                                             AnchorPane.topAnchor="32.0">
                                     <children>
-                                        <Button fx:id="getFederationDataBtn" layoutX="14.0" layoutY="14.0"
+                                        <Button fx:id="getFederationDataBtn" layoutX="5.0" layoutY="14.0"
                                                 mnemonicParsing="false" prefHeight="25.0" prefWidth="170.0"
                                                 text="Get From Fed.network" AnchorPane.leftAnchor="5.0"
-                                                AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0"/>
+                                                AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="14.0"/>
                                         <Separator layoutY="534.0" prefHeight="0.0" prefWidth="185.0"
                                                    AnchorPane.bottomAnchor="122.0" AnchorPane.leftAnchor="0.0"
                                                    AnchorPane.rightAnchor="0.0"/>
-                                        <Label layoutX="70.0" layoutY="507.0" text="Votes"
+                                        <Label layoutX="84.0" layoutY="657.0" text="Votes"
                                                AnchorPane.bottomAnchor="125.0">
                                             <font>
                                                 <Font size="18.0"/>
                                             </font>
                                         </Label>
-                                        <Label layoutX="-5.0" layoutY="687.0" text="Voters:"
-                                               AnchorPane.bottomAnchor="105.0" AnchorPane.leftAnchor="0.0"/>
-                                        <Label layoutX="-5.0" layoutY="705.0" text="Votes:"
-                                               AnchorPane.bottomAnchor="87.0" AnchorPane.leftAnchor="0.0"/>
-                                        <Label fx:id="poolDataTotalVotesLabel" layoutX="47.0" layoutY="705.0"
+                                        <Label layoutX="2.0" layoutY="688.0" text="Voters:"
+                                               AnchorPane.bottomAnchor="104.0" AnchorPane.leftAnchor="2.0"/>
+                                        <Label layoutX="2.0" layoutY="705.0" text="Votes:"
+                                               AnchorPane.bottomAnchor="87.0" AnchorPane.leftAnchor="2.0"/>
+                                        <Label fx:id="poolDataTotalVotesLabel" layoutX="49.0" layoutY="705.0"
                                                text="0 XLM" AnchorPane.bottomAnchor="87.0"
-                                               AnchorPane.leftAnchor="47.0"/>
-                                        <Label fx:id="poolDataVotersLabel" layoutX="47.0" layoutY="687.0" text="0"
-                                               AnchorPane.bottomAnchor="105.0" AnchorPane.leftAnchor="47.0"/>
-                                        <Button fx:id="getHorizonDataBtn" layoutX="6.0" layoutY="37.0"
+                                               AnchorPane.leftAnchor="49.0"/>
+                                        <Label fx:id="poolDataVotersLabel" layoutX="49.0" layoutY="688.0" text="0"
+                                               AnchorPane.bottomAnchor="104.0" AnchorPane.leftAnchor="49.0"/>
+                                        <Button fx:id="getHorizonDataBtn" layoutX="5.0" layoutY="44.0"
                                                 mnemonicParsing="false" text="Get From Horizon DB"
                                                 AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0"
-                                                AnchorPane.topAnchor="35.0"/>
-                                        <Label layoutX="42.0" layoutY="587.0" text="Pool Balance"
-                                               AnchorPane.bottomAnchor="45.0">
+                                                AnchorPane.topAnchor="44.0"/>
+                                        <Label layoutX="55.0" layoutY="738.0" text="Pool Balance"
+                                               AnchorPane.bottomAnchor="44.0">
                                             <font>
                                                 <Font size="18.0"/>
                                             </font>
                                         </Label>
-                                        <Label fx:id="poolDataBalanceLabel" layoutY="773.0" text="0 XLM"
-                                               AnchorPane.bottomAnchor="9.0" AnchorPane.leftAnchor="0.0">
+                                        <Label fx:id="poolDataBalanceLabel" layoutX="12.0" layoutY="775.0" text="0 XLM"
+                                               AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="12.0">
                                             <font>
                                                 <Font size="18.0"/>
                                             </font>
@@ -86,13 +86,13 @@
                                         <Separator layoutY="613.0" prefHeight="0.0" prefWidth="185.0"
                                                    AnchorPane.bottomAnchor="43.0" AnchorPane.leftAnchor="0.0"
                                                    AnchorPane.rightAnchor="0.0"/>
-                                        <Button fx:id="refreshPoolBalanceBtn" layoutX="6.0" layoutY="60.0"
+                                        <Button fx:id="refreshPoolBalanceBtn" layoutX="5.0" layoutY="74.0"
                                                 mnemonicParsing="false" text="Refresh Pool Balance"
                                                 AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0"
-                                                AnchorPane.topAnchor="65.0"/>
+                                                AnchorPane.topAnchor="74.0"/>
                                         <Rectangle fx:id="selectedNetworkRect" arcHeight="5.0" arcWidth="5.0"
                                                    fill="#cdcdcd" height="59.0" layoutX="5.0" layoutY="441.0"
-                                                   stroke="BLACK" strokeType="INSIDE" width="175.0"
+                                                   stroke="BLACK" strokeType="INSIDE" width="202.0"
                                                    AnchorPane.bottomAnchor="159.0" AnchorPane.leftAnchor="5.0"
                                                    AnchorPane.rightAnchor="5.0"/>
                                         <Label fx:id="selectedNetworkLabel" layoutX="29.0" layoutY="453.0"
@@ -103,21 +103,23 @@
                                                 <Font size="18.0"/>
                                             </font>
                                         </Label>
-                                        <Button fx:id="buildTransactionBtn" layoutX="6.0" layoutY="322.0"
+                                        <Button fx:id="buildTransactionBtn" layoutX="5.0" layoutY="104.0"
                                                 mnemonicParsing="false" prefHeight="53.0" prefWidth="174.0"
                                                 stylesheets="@inflationManagerMain.css" text="BUILD TRANSACTION PLAN"
-                                                AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="95.0"/>
+                                                AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0"
+                                                AnchorPane.topAnchor="104.0"/>
                                     </children>
                                 </AnchorPane>
                                 <Label layoutX="14.0" layoutY="9.0" text="Pool Address:" AnchorPane.leftAnchor="14.0"
                                        AnchorPane.topAnchor="9.0"/>
-                                <TextField fx:id="poolAddressTextField" layoutX="91.0" layoutY="629.0" prefHeight="25.0"
-                                           prefWidth="787.0" promptText="Account ID of the target inflation pool"
-                                           text="" AnchorPane.leftAnchor="91.0" AnchorPane.rightAnchor="200.0"
+                                <TextField fx:id="poolAddressTextField" layoutX="102.0" layoutY="629.0"
+                                           prefHeight="25.0" prefWidth="669.0"
+                                           promptText="Account ID of the target inflation pool" text=""
+                                           AnchorPane.leftAnchor="102.0" AnchorPane.rightAnchor="229.0"
                                            AnchorPane.topAnchor="5.0"/>
-                                <ProgressBar fx:id="progressBar" layoutX="892.0" layoutY="7.0" prefHeight="18.0"
-                                             prefWidth="175.0" progress="0.0" AnchorPane.rightAnchor="14.0"
-                                             AnchorPane.topAnchor="7.0"/>
+                                <ProgressBar fx:id="progressBar" layoutX="781.0" layoutY="6.0" prefHeight="25.0"
+                                             prefWidth="205.0" progress="0.0" AnchorPane.rightAnchor="14.0"
+                                             AnchorPane.topAnchor="6.0"/>
                             </children>
                         </AnchorPane>
                     </content>
