--- a/manager/src/main/resources/inflationManagerSettings.fxml
+++ b/manager/src/main/resources/inflationManagerSettings.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -14,44 +15,43 @@
         <Label layoutX="96.0" layoutY="24.0" text="Stellar Network" AnchorPane.leftAnchor="96.0"
                AnchorPane.topAnchor="24.0"/>
         <ChoiceBox fx:id="activeNetworkChoiceBox" layoutX="189.0" layoutY="20.0" prefHeight="25.0" prefWidth="496.0"
-                   AnchorPane.leftAnchor="189.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="20.0"/>
-        <Label layoutX="19.0" layoutY="59.0" text="Default Inflation Pool Address" AnchorPane.leftAnchor="19.0"
+                   AnchorPane.leftAnchor="210.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="20.0"/>
+        <Label layoutX="62.0" layoutY="59.0" text="Inflation Pool Address" AnchorPane.leftAnchor="62.0"
                AnchorPane.topAnchor="59.0"/>
         <TextField fx:id="defaultPoolAddressTextField" layoutX="189.0" layoutY="55.0" prefHeight="25.0"
-                   prefWidth="496.0" AnchorPane.leftAnchor="189.0" AnchorPane.rightAnchor="15.0"
+                   prefWidth="496.0" AnchorPane.leftAnchor="210.0" AnchorPane.rightAnchor="15.0"
                    AnchorPane.topAnchor="55.0"/>
         <TextField fx:id="defaultFedNetworkInflationUrlTextField" layoutX="189.0" layoutY="90.0" prefHeight="25.0"
-                   prefWidth="496.0" AnchorPane.leftAnchor="189.0" AnchorPane.rightAnchor="15.0"
+                   prefWidth="496.0" AnchorPane.leftAnchor="210.0" AnchorPane.rightAnchor="15.0"
                    AnchorPane.topAnchor="90.0"/>
-        <Label layoutX="26.0" layoutY="94.0" text="Federation Network Address" AnchorPane.leftAnchor="26.0"
+        <Label layoutX="46.0" layoutY="94.0" text="Federation Network URL" AnchorPane.leftAnchor="46.0"
                AnchorPane.topAnchor="94.0"/>
         <Button fx:id="saveBtn" layoutX="534.0" layoutY="361.0" mnemonicParsing="false" prefHeight="25.0"
                 prefWidth="151.0" text="Save" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="15.0"/>
         <Button fx:id="cancelBtn" layoutX="460.0" layoutY="361.0" mnemonicParsing="false" prefHeight="25.0"
                 prefWidth="64.0" text="Cancel" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="176.0"/>
-        <Label layoutX="40.0" layoutY="217.0" text="Horizon Database Address" AnchorPane.leftAnchor="40.0"
+        <Label layoutX="83.0" layoutY="217.0" text="Horizon DB Host" AnchorPane.leftAnchor="83.0"
                AnchorPane.topAnchor="217.0"/>
-        <TextField fx:id="horizonDbAddress" layoutX="190.0" layoutY="213.0" prefHeight="25.0" prefWidth="374.0"
-                   promptText="localhost" AnchorPane.leftAnchor="190.0" AnchorPane.topAnchor="213.0"/>
+        <TextField fx:id="horizonDbAddress" layoutX="202.0" layoutY="213.0" prefHeight="25.0" prefWidth="342.0"
+                   promptText="localhost" AnchorPane.leftAnchor="210.0" AnchorPane.topAnchor="213.0"/>
         <TextField fx:id="horizonDbPort" layoutX="604.0" layoutY="213.0" prefHeight="25.0" prefWidth="82.0"
                    promptText="5432" AnchorPane.leftAnchor="604.0" AnchorPane.rightAnchor="14.0"
                    AnchorPane.topAnchor="213.0"/>
-        <Label layoutX="569.0" layoutY="217.0" text="Port" AnchorPane.leftAnchor="569.0" AnchorPane.topAnchor="217.0"/>
-        <Label layoutX="127.0" layoutY="250.0" text="Username" AnchorPane.leftAnchor="127.0"
+        <Label layoutX="561.0" layoutY="217.0" text="Port" AnchorPane.leftAnchor="561.0" AnchorPane.topAnchor="217.0"/>
+        <Label layoutX="118.0" layoutY="250.0" text="Username" AnchorPane.leftAnchor="118.0"
                AnchorPane.topAnchor="250.0"/>
-        <Label layoutX="424.0" layoutY="250.0" text="Password" AnchorPane.leftAnchor="424.0"
-               AnchorPane.topAnchor="250.0"/>
+        <Label layoutX="448.0" layoutY="250.0" text="Pass" AnchorPane.leftAnchor="448.0" AnchorPane.topAnchor="250.0"/>
         <TextField fx:id="horizonDbUser" layoutX="190.0" layoutY="246.0" prefHeight="25.0" prefWidth="225.0"
-                   AnchorPane.leftAnchor="190.0" AnchorPane.topAnchor="246.0"/>
-        <TextField fx:id="horizonDbPass" layoutX="479.0" layoutY="246.0" prefHeight="25.0" prefWidth="203.0"
-                   AnchorPane.leftAnchor="479.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="246.0"/>
+                   AnchorPane.leftAnchor="210.0" AnchorPane.topAnchor="246.0"/>
         <Separator layoutY="196.0" prefWidth="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"/>
-        <Label layoutX="37.0" layoutY="129.0" text="Memo Text (max 28 chars)"/>
+        <Label layoutX="60.0" layoutY="129.0" text="Memo Text (28 chars)"/>
         <TextField fx:id="defaultMemoTextField" layoutX="189.0" layoutY="125.0" prefHeight="25.0" prefWidth="496.0"
-                   AnchorPane.leftAnchor="189.0" AnchorPane.topAnchor="125.0"/>
-        <Label layoutX="63.0" layoutY="164.0" text="Fee (min 100 stroops)" AnchorPane.leftAnchor="63.0"
+                   AnchorPane.leftAnchor="210.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="125.0"/>
+        <Label layoutX="60.0" layoutY="164.0" text="Fee (min 100 stroops)" AnchorPane.leftAnchor="60.0"
                AnchorPane.topAnchor="164.0"/>
         <TextField fx:id="defaultFeeTextField" layoutX="190.0" layoutY="160.0" prefHeight="25.0" prefWidth="496.0"
-                   AnchorPane.leftAnchor="190.0" AnchorPane.topAnchor="160.0"/>
+                   AnchorPane.leftAnchor="210.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="160.0"/>
+        <PasswordField fx:id="horizonDbPass" layoutX="487.0" layoutY="246.0" prefHeight="25.0" prefWidth="199.0"
+                       AnchorPane.rightAnchor="15.0"/>
     </children>
 </AnchorPane>
