--- a/manager/src/main/resources/inflationManagerMain.fxml
+++ b/manager/src/main/resources/inflationManagerMain.fxml
@@ -6,7 +6,6 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ProgressBar?>
-<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextArea?>
@@ -45,60 +44,37 @@
                                             AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="9.0"
                                             AnchorPane.topAnchor="32.0">
                                     <children>
+                                        <Rectangle fx:id="selectedNetworkRect" arcHeight="5.0" arcWidth="5.0"
+                                                   fill="#cdcdcd" height="149.0" layoutX="7.0" layoutY="164.0"
+                                                   stroke="BLACK" strokeType="INSIDE" width="202.0"
+                                                   AnchorPane.leftAnchor="7.0" AnchorPane.rightAnchor="6.0"
+                                                   AnchorPane.topAnchor="164.0"/>
                                         <Button fx:id="getFederationDataBtn" layoutX="5.0" layoutY="14.0"
                                                 mnemonicParsing="false" prefHeight="25.0" prefWidth="170.0"
                                                 text="Get From Fed.network" AnchorPane.leftAnchor="5.0"
                                                 AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="14.0"/>
-                                        <Separator layoutY="534.0" prefHeight="0.0" prefWidth="185.0"
-                                                   AnchorPane.bottomAnchor="122.0" AnchorPane.leftAnchor="0.0"
-                                                   AnchorPane.rightAnchor="0.0"/>
-                                        <Label layoutX="84.0" layoutY="657.0" text="Votes"
-                                               AnchorPane.bottomAnchor="125.0">
-                                            <font>
-                                                <Font size="18.0"/>
-                                            </font>
-                                        </Label>
-                                        <Label layoutX="2.0" layoutY="688.0" text="Voters:"
-                                               AnchorPane.bottomAnchor="104.0" AnchorPane.leftAnchor="2.0"/>
-                                        <Label layoutX="2.0" layoutY="705.0" text="Votes:"
-                                               AnchorPane.bottomAnchor="87.0" AnchorPane.leftAnchor="2.0"/>
-                                        <Label fx:id="poolDataTotalVotesLabel" layoutX="49.0" layoutY="705.0"
-                                               text="0 XLM" AnchorPane.bottomAnchor="87.0"
-                                               AnchorPane.leftAnchor="49.0"/>
-                                        <Label fx:id="poolDataVotersLabel" layoutX="49.0" layoutY="688.0" text="0"
-                                               AnchorPane.bottomAnchor="104.0" AnchorPane.leftAnchor="49.0"/>
+                                        <Label layoutX="21.0" layoutY="247.0" text="Voters:"
+                                               AnchorPane.leftAnchor="21.0" AnchorPane.topAnchor="247.0"/>
+                                        <Label layoutX="26.0" layoutY="265.0" text="Votes:" AnchorPane.leftAnchor="26.0"
+                                               AnchorPane.topAnchor="265.0"/>
+                                        <Label fx:id="poolDataTotalVotesLabel" layoutX="74.0" layoutY="266.0"
+                                               text="0 XLM" AnchorPane.leftAnchor="74.0" AnchorPane.topAnchor="266.0"/>
+                                        <Label fx:id="poolDataVotersLabel" layoutX="74.0" layoutY="248.0" text="0"
+                                               AnchorPane.leftAnchor="74.0" AnchorPane.topAnchor="248.0"/>
                                         <Button fx:id="getHorizonDataBtn" layoutX="5.0" layoutY="44.0"
                                                 mnemonicParsing="false" text="Get From Horizon DB"
                                                 AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0"
                                                 AnchorPane.topAnchor="44.0"/>
-                                        <Label layoutX="55.0" layoutY="738.0" text="Pool Balance"
-                                               AnchorPane.bottomAnchor="44.0">
-                                            <font>
-                                                <Font size="18.0"/>
-                                            </font>
-                                        </Label>
-                                        <Label fx:id="poolDataBalanceLabel" layoutX="12.0" layoutY="775.0" text="0 XLM"
-                                               AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="12.0">
-                                            <font>
-                                                <Font size="18.0"/>
-                                            </font>
-                                        </Label>
-                                        <Separator layoutY="613.0" prefHeight="0.0" prefWidth="185.0"
-                                                   AnchorPane.bottomAnchor="43.0" AnchorPane.leftAnchor="0.0"
-                                                   AnchorPane.rightAnchor="0.0"/>
+                                        <Label fx:id="poolDataBalanceLabel" layoutX="74.0" layoutY="284.0" text="0 XLM"
+                                               AnchorPane.leftAnchor="74.0" AnchorPane.topAnchor="284.0"/>
                                         <Button fx:id="refreshPoolBalanceBtn" layoutX="5.0" layoutY="74.0"
                                                 mnemonicParsing="false" text="Refresh Pool Balance"
                                                 AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0"
                                                 AnchorPane.topAnchor="74.0"/>
-                                        <Rectangle fx:id="selectedNetworkRect" arcHeight="5.0" arcWidth="5.0"
-                                                   fill="#cdcdcd" height="59.0" layoutX="5.0" layoutY="441.0"
-                                                   stroke="BLACK" strokeType="INSIDE" width="202.0"
-                                                   AnchorPane.bottomAnchor="159.0" AnchorPane.leftAnchor="5.0"
-                                                   AnchorPane.rightAnchor="5.0"/>
-                                        <Label fx:id="selectedNetworkLabel" layoutX="42.0" layoutY="603.0"
-                                               prefHeight="35.0" prefWidth="129.0" textAlignment="CENTER"
-                                               AnchorPane.bottomAnchor="171.0" AnchorPane.leftAnchor="42.0"
-                                               AnchorPane.rightAnchor="44.0">
+                                        <Label fx:id="selectedNetworkLabel" alignment="CENTER" layoutX="13.0"
+                                               layoutY="179.0" prefHeight="35.0" prefWidth="190.0" text="LIVE NETWORK"
+                                               textAlignment="CENTER" AnchorPane.leftAnchor="13.0"
+                                               AnchorPane.rightAnchor="12.0" AnchorPane.topAnchor="179.0">
                                             <font>
                                                 <Font size="18.0"/>
                                             </font>
@@ -108,6 +84,8 @@
                                                 stylesheets="@inflationManagerMain.css" text="BUILD TRANSACTION PLAN"
                                                 AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0"
                                                 AnchorPane.topAnchor="104.0"/>
+                                        <Label layoutX="16.0" layoutY="283.0" text="Balance:"
+                                               AnchorPane.leftAnchor="16.0" AnchorPane.topAnchor="283.0"/>
                                     </children>
                                 </AnchorPane>
                                 <Label layoutX="14.0" layoutY="9.0" text="Pool Address:" AnchorPane.leftAnchor="14.0"
