--- a/manager/src/main/resources/inflationManagerTransactions.fxml
+++ b/manager/src/main/resources/inflationManagerTransactions.fxml
@@ -70,18 +70,14 @@
                AnchorPane.leftAnchor="320.0"/>
         <Label fx:id="plannedTransactionsLabel" layoutX="381.0" layoutY="647.0" text="0" AnchorPane.bottomAnchor="36.0"
                AnchorPane.leftAnchor="381.0"/>
-        <Label layoutX="458.0" layoutY="597.0" text="Payment total (after fees)" AnchorPane.bottomAnchor="76.0"
+        <Label layoutX="458.0" layoutY="597.0" text="Payment plan" AnchorPane.bottomAnchor="76.0"
                AnchorPane.leftAnchor="458.0">
             <font>
                 <Font size="18.0"/>
             </font>
         </Label>
-        <Label fx:id="toBePaidLabel" layoutX="458.0" layoutY="636.0" text="0 XLM" AnchorPane.bottomAnchor="37.0"
-               AnchorPane.leftAnchor="458.0">
-            <font>
-                <Font size="18.0"/>
-            </font>
-        </Label>
+        <Label fx:id="toBePaidLabel" layoutX="513.0" layoutY="629.0" text="0 XLM" AnchorPane.bottomAnchor="54.0"
+               AnchorPane.leftAnchor="513.0"/>
         <Button fx:id="saveTransactionPlanBtn" layoutX="5.0" layoutY="641.0" mnemonicParsing="false" prefHeight="25.0"
                 prefWidth="140.0" text="Save plan" AnchorPane.bottomAnchor="34.0" AnchorPane.leftAnchor="5.0"/>
         <Label layoutX="317.0" layoutY="602.0" text="excluded:" AnchorPane.bottomAnchor="81.0"
@@ -106,5 +102,15 @@
         <TextField fx:id="inflationAmountTextField" layoutX="695.0" layoutY="621.0" prefHeight="25.0" prefWidth="200.0"
                    promptText="Inflation amount" AnchorPane.bottomAnchor="54.0" AnchorPane.leftAnchor="695.0"
                    AnchorPane.rightAnchor="5.0"/>
+        <Label layoutX="458.0" layoutY="629.0" text="Payout:" AnchorPane.bottomAnchor="54.0"
+               AnchorPane.leftAnchor="458.0"/>
+        <Label layoutX="471.0" layoutY="648.0" text="Fees:" AnchorPane.bottomAnchor="35.0"
+               AnchorPane.leftAnchor="471.0"/>
+        <Label fx:id="feesPaidLabel" layoutX="513.0" layoutY="648.0" text="0 XLM" AnchorPane.bottomAnchor="35.0"
+               AnchorPane.leftAnchor="513.0"/>
+        <Label layoutX="470.0" layoutY="667.0" text="Total:" AnchorPane.bottomAnchor="16.0"
+               AnchorPane.leftAnchor="470.0"/>
+        <Label fx:id="totalPaidLabel" layoutX="513.0" layoutY="667.0" text="0 XLM" AnchorPane.bottomAnchor="16.0"
+               AnchorPane.leftAnchor="513.0"/>
     </children>
 </AnchorPane>
